# gen2dot

./: .gitignore  Doxyfile  README.md  gen2dot.py  lhe2dot.py  makeJson.py  pyproject.toml
gen2dot/: gen2dot.py  lhe2dot.py  makejson.py
